[package]
name = "range_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = { git = "https://github.com/ikhaliq15/Spartan" }
curve25519-dalek = {version = "3.2.0", features = ["serde", "simd_backend"]}
merlin = "3.0.0"
rand = "0.7.3"
r1cs = "0.4.7"

[patch."https://github.com/ikhaliq15/Spartan"]
spartan = { path = "../Spartan" }